# crawlers

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  ruff.toml  serverless.yml
.github/workflows/: deploy-staging.yml
deploy/: taskdef-template.json
deploy/app/: Dockerfile
deploy/proxy/: nginx.conf
hasura/metadata/databases/default/tables/: public_boat_betting_contribute_rate_aggregations.yaml  public_boat_settings.yaml  public_circumference_exhibition_records.yaml  public_disqualified_race_entries.yaml  public_motor_betting_contribute_rate_aggregations.yaml  public_motor_maintenances.yaml  public_motor_renewals.yaml  public_odds.yaml  public_payoffs.yaml  public_race_entries.yaml  public_race_records.yaml  public_racer_conditions.yaml  public_racer_winning_rate_aggregations.yaml  public_racers.yaml  public_races.yaml  public_stadiums.yaml  public_start_exhibition_records.yaml  public_weather_conditions.yaml  public_winning_race_entries.yaml  tables.yaml
hasura/migrations/default/1743501032141_init/: up.sql
infra/: main.tf
infra/terraform/live/local/: main.tf
metaboatrace/: celery.py
metaboatrace/crawlers/: celery.py  exceptions.py  race.py  racer.py  scheduler.py  stadium.py  utils.py
metaboatrace/crawlers/official/website/v1707/: proxy.py  race.py  racer.py  stadium.py
metaboatrace/di/: repositories.py
metaboatrace/handlers/: race.py  racer.py  racer_handler.py  stadium.py  stadium_handler.py
metaboatrace/orm/: database.py
metaboatrace/orm/models/: __init__.py  boat.py  race.py  racer.py  stadium.py
metaboatrace/orm/strategies/: upsert.py
metaboatrace/repositories/: __init__.py  base.py  boat.py  race.py  racer.py  stadium.py
scripts/: crawl_data_for_period.py  crawl_incomplete_racer_profiles.py  crawl_missing_racers.py  delete_data_within_specified_term.py  initialize_master_data.py  initialize_or_update_db.py  reset_db.py  trim_data_for_specified_term.py  update_incomplete_racer_terms.py
src/crawlers/: __init__.py
tests/metaboatrace/crawlers/: test_racer.py
tests/metaboatrace/crawlers/official/website/v1707/: test_racer.py
tests/metaboatrace/handlers/: test_race_handler.py  test_racer_handler.py  test_stadium_handler.py
