[project]
name = "crawlers"
version = "0.1.0"
description = "Crawlers for Japanese boatrace websites"
authors = [
    { name = "k0kishima", email = "okishimaxyz@gmail.com" }
]
dependencies = [
    "metaboatrace.models>=2.2.6",
    "metaboatrace.scrapers>=3.2.0",
    "requests>=2.31.0",
    "types-requests>=2.31.0.2",
    "SQLAlchemy>=2.0.23",
    "pymysql>=1.1.0",
    "cryptography>=41.0.5",
    "celery>=5.3.6",
    "flower>=2.0.1",
    "redis>=5.0.1",
    "pytz>=2023.3.post1",
    "types-pytz>=2023.3.1.1",
    "tqdm>=4.66.1",
    "psycopg2-binary>=2.9.9",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev_dependencies = []
dev-dependencies = [
    "mypy>=1.7.0",
    "black>=23.7.0",
    "pytest>=7.4.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
explicit_package_bases = true

[tool.black]
line-length = 100
target-version = ['py310']
