[project]
name = "crawlers"
version = "0.1.0"
description = "Crawlers for Japanese boatrace websites"
authors = [
    { name = "k0kishima", email = "okishimaxyz@gmail.com" }
]
dependencies = [
    "metaboatrace.models>=2.2.7",
    "metaboatrace.scrapers>=3.3.1",
    "requests>=2.31.0",
    "types-requests>=2.31.0.2",
    "SQLAlchemy>=2.0.23",
    "pymysql>=1.1.0",
    "cryptography>=41.0.5",
    "celery>=5.3.6",
    "flower>=2.0.1",
    "redis>=5.0.1",
    "pytz>=2023.3.post1",
    "types-pytz>=2023.3.1.1",
    "tqdm>=4.66.1",
    "psycopg2-binary>=2.9.9",
    "slack-sdk>=3.27.1",
    "python-dotenv>=1.1.0",
    "cachetools>=5.3.2",
    "types-cachetools>=5.5.0.20240820",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
explicit_package_bases = true

[tool.black]
line-length = 100
target-version = ['py311']

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.12.5",
    "types-cachetools>=5.3.0.20240311",
]
